Manejo de sesiones y cookies

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /manejoFormulariosHTML/target/
 /CabecerosRespuesta/target/
 /ManejoCookies/target/
+/ContadorCookies/target/
+/ManejoSesiones/target/
