scriptlets, expresiones y JavaBeans

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 /ContadorCookies/target/
 /ManejoSesiones/target/
 /CarritoCompras/target/
+/JSP/HolaMundoJSPs/target/
+/JSP/ExpresionesJSPs/target/
+/Scriptlests/target/
+/Declaraciones/target/
+/ManejoJavaBeans/target/
